--- a/.github/workflows/deployment-notifications.yml
+++ b/.github/workflows/deployment-notifications.yml
@@ -1,7 +1,9 @@
 name: Notify the team on deployments
 
 on:
-    [deployment_status]
+    workflow_dispatch: 
+    deployment_status: 
+    
 
 
 jobs:
